syntax = "proto3";

package greet;

option go_package = "greetpb";

message Greeting {
    string first_name = 1;
    string last_name = 2;
}

// Unary Message
message GreetRequest {
    Greeting greeting = 1;
}

message GreetResponse {
    string result = 1;
}

// Server Streaming Message
message GreetManyTimesRequest {
    Greeting greeting = 1;
}

message GreetManyTimesResponse {
    string result = 1;
}

// Client Streaming Message
message LongGreetRequest {
    Greeting greeting = 1;
}

message LongGreetResponse {
    string result = 1;
}

message GreetEveryoneRequest {
    Greeting greeting = 1;
}

message GreetEveryoneResponse {
    string result = 1;
}

service GreetService {
    // Unary RPC call
    rpc Greet(GreetRequest) returns (GreetResponse) {};

    // Server Streaming RPC Call
    rpc GreetManyTimes(GreetManyTimesRequest) returns (stream GreetManyTimesResponse) {};

    // Client Streaming RPC Call
    rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse) {};

    // Bi-Directional RPC Call
    rpc GreetEveryone(stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse) {};
}
